done skills section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alexander's Responsive Portfolio</title>
 
     <!-- ===== CSS FILE ======  -->
     <link rel="stylesheet" href="/styles.css">
@@ -61,7 +61,7 @@
                 <img src="/images/aj-2.jpg" class="profile" alt="">
             </div>
         </div>
-        <a href="#about" class="scroll-down">Scroll Down <i class="fas fa-arrow-down"></i></a>
+        <a href="#about" class="scroll-down">Scroll<i class="fas fa-arrow-down"></i>Down</a>
     </section>
     <!-- ====== HOME SECTION END HERE==== -->
 
@@ -105,12 +105,184 @@
                             <span>Kilometers of<br>Driving</span>
                         </li>
                     </ul>
-                    <a href="/images/mycv.pdf" download class="btn"> Download CV <i class="fa fa-file-download" aria-hidden="true"></i></a>
+                    <a href="/images/mycv.pdf" download class="btn"> Download CV <i class="fa fa-file-download"></i></a>
                 </div>
             </div>
         </div>
     </section>
     <!-- ====== ABOUT SECTION END HERE==== -->
+
+    <!-- ====== SKILLS SECTION START HERE==== -->
+    <section class="skills section" id="skills">
+        <div class="container flex-center">
+            <h1 class="section-title-01">Skills</h1>
+            <h2 class="section-title-02">Skills</h2>
+            <div class="content">
+                <div class="skills-description">
+                    <h3>Education & Skills</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo omnis aut cumque fugit
+                        voluptatem harum minima provident distinctio, quisquam quos laboriosam incidunt sunt commodi
+                        dolorum tempore. Recusandae quam quasi quisquam! Voluptatem non deserunt esse assumenda,
+                        perferendis illo adipisci illum nihil voluptatibus doloremque ullam amet. Distinctio commodi
+                        consectetur maiores odit dicta?</p>
+                </div>
+                <div class="skills-info education-all">
+                    <div class="education">
+                        <h4><label>Education</label></h4>
+                        <ul class="edu-list">
+                            <li class="item">
+                                <span class="year">2020-2021</span>
+                                <p><span>Certificate, Software Development</span> CodeYourFuture, RSA</p>
+                                 <a href="/images/mycv.pdf" target="_blank" class="btn">VIEW CERTIFICATE</a>
+                            </li>
+                            <li class="item">
+                                <span class="year">2021-2022</span>
+                                <p><span>Certificate, Web Development</span> Udemy, Online</p>
+                                 <a href="/images/mycv.pdf" target="_blank" class="btn">VIEW CERTIFICATE</a>
+                            </li>
+                            <li class="item">
+                                <span class="year">2021-2022</span>
+                                <p><span>Certificate, JavaScript Course</span> Udemy, Online</p>
+                                 <a href="/images/mycv.pdf" target="_blank" class="btn">VIEW CERTIFICATE</a>
+                            </li>
+                            <li class="item">
+                                <span class="year">2018-2019</span>
+                                <p><span>Certificate, Theological Studies</span> MAGIT, Malawi</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="education">
+                        <h4><label>Skills</label></h4>
+                        <ul class="bars">
+                            <li class="bar">
+                                <div class="info">
+                                    <span>HTML</span>
+                                    <span>94%</span>
+                                </div>
+                                <div class="line html"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>CSS</span>
+                                    <span>84%</span>
+                                </div>
+                                <div class="line css"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>JavaScript</span>
+                                    <span>78%</span>
+                                </div>
+                                <div class="line javascript"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>JQuery</span>
+                                    <span>78%</span>
+                                </div>
+                                <div class="line jquery"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>Reactjs</span>
+                                    <span>80%</span>
+                                </div>
+                                <div class="line react"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>Nodejs</span>
+                                    <span>78%</span>
+                                </div>
+                                <div class="line node"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>MySQL</span>
+                                    <span>95%</span>
+                                </div>
+                                <div class="line mysql"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>PostgreSQL</span>
+                                    <span>94%</span>
+                                </div>
+                                <div class="line postgresql"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>MongoDB</span>
+                                    <span>90%</span>
+                                </div>
+                                <div class="line mongo"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>Git Version Control</span>
+                                    <span>97%</span>
+                                </div>
+                                <div class="line git"></div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="education">
+                        <h4><label>Awards</label></h4>
+                        <ul class="edu-list">
+                            <li class="item">
+                                <span class="year">2022</span>
+                                <p><span>Helpful Student</span> - MAGIT</p>
+                            </li>
+                            <li class="item">
+                                <span class="year">2022</span>
+                                <p><span>Gold Medal Winner</span> - Zone Fitness Gym, Fishoek</p>
+                            </li>
+                            <li class="item">
+                                <span class="year">2021</span>
+                                <p><span>Outstanding Driver</span> - Uber, Cape Town</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="skills-description">
+                    <h3>Work & Experience</h3>
+                </div>
+                <div class="skills-info">
+                    <div class="experience-card">
+                        <div class="upper">
+                            <h3>Volunteer Educator</h3>
+                            <h5>Part Time | Online</h5>
+                            <span>2021 - Present</span>
+                        </div>
+                        <div class="hr"></div>
+                        <h4><label>CodeYourFuture</label></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga at rem, laudantium corporis corrupti incidunt, ad quis obcaecati similique eveniet nulla cupiditate facilis aliquam explicabo?</p>
+                    </div>
+                    <div class="experience-card">
+                        <div class="upper">
+                            <h3>Uber Partner</h3>
+                            <h5>Full Time | Ehailing</h5>
+                            <span>2015 - Present</span>
+                        </div>
+                        <div class="hr"></div>
+                        <h4><label>Uber - Cape Town</label></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas cumque id enim, natus omnis molestiae laborum eligendi quia earum alias porro vero tempora. Quo delectus porro perspiciatis provident sed.</p>
+                    </div>
+                    <div class="experience-card">
+                        <div class="upper">
+                            <h3>Quality Assurance</h3>
+                            <h5>Full Time | Cape Town</h5>
+                            <span>2014 - 2015</span>
+                        </div>
+                        <div class="hr"></div>
+                        <h4><label>Eco Funiture Design</label></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus minus inventore molestias tempora deserunt? Eligendi obcaecati nam magni corporis quam aperiam ad, alias quibusdam corrupti a reiciendis recusandae.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ====== SKILL SECTION END HERE==== -->
 
 
     <script src="/script.js"></script>
