--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <div class="home-container">
             <div class="media-icons">
                 <a href="facebook"><i class="fab fa-github-square"></i></a>
-                <a href="facebook"><i class="fa fa-linkedin-square"></i></a>
+               <a href=""><i class="fab fa-linkedin-in    "></i></a>
+               <a href="linkedin"><i class="fab fa-facebook"></i></a>
                 <a href=""><i class="fa fa-globe"></i></a>
             </div>
             <div class="info">
@@ -61,7 +62,9 @@
                 <img src="/images/aj-2.jpg" class="profile" alt="">
             </div>
         </div>
-        <a href="#about" class="scroll-down">Scroll<i class="fas fa-arrow-down"></i>Down</a>
+        <!-- <a href="#about" class="scroll-down">Scroll<i class="fas fa-arrow-down"></i>Down</a> -->
+        <a href="#about" class="scroll-down">Scroll Down
+   <i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
     </section>
     <!-- ====== HOME SECTION END HERE==== -->
 
@@ -283,6 +286,120 @@
         </div>
     </section>
     <!-- ====== SKILL SECTION END HERE==== -->
+
+     <!-- ====== SERVICES SECTION START HERE==== -->
+     <section class="services section" id="services">
+        <div class="container flex-center">
+            <h1 class="section-title-01">Services</h1>
+             <h2 class="section-title-02">Services</h2>
+             <div class="content">
+                <div class="services-description">
+                    <h3>What I Do</h3>
+                </div>
+                <ul class="service-list">
+                    <li class="service-container">
+                        <div class="service-card">
+                            <i class="fa fa-code"></i>
+                            <h3>UI/UX Development</h3>
+                            <div class="learn-more-btn">Learn More <i class="fa fa-arrow-right"></i></div>
+                        </div>
+                        <div class="service-modal flex-center">
+                            <div class="service-modal-body">
+                                <i class="fas fa-times modal-close-btn"></i>
+                               <h3>UI/UX Development</h3>
+                                <h4>What is UX Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id eligendi aperiam
+                                    assumenda. Tenetur nam necessitatibus numquam, distinctio repellendus architecto.
+                                </p>
+                                <h4>What I Provide</h4>
+                                <ul>
+                                    <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet.</li>
+                                    <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet.</li>
+                                    <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet</li>
+                                    <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+
+                     <li class="service-container">
+                         <div class="service-card">
+                             <i class="fas fa-laptop-code    "></i>
+                             <h3>Backend Development</h3>
+                             <div class="learn-more-btn">Learn More <i class="fa fa-arrow-right"></i></div>
+                         </div>
+                         <div class="service-modal flex-center">
+                             <div class="service-modal-body">
+                                 <i class="fas fa-times modal-close-btn"></i>
+                                 <h3>Backend Development</h3>
+                                 <h4>What is UX Design</h4>
+                                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id eligendi aperiam
+                                     assumenda. Tenetur nam necessitatibus numquam, distinctio repellendus architecto.
+                                 </p>
+                                 <h4>What I Provide</h4>
+                                 <ul>
+                                     <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet.</li>
+                                     <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet.</li>
+                                     <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet</li>
+                                     <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit.</li>
+                                 </ul>
+                             </div>
+                         </div>
+                     </li>
+
+                          <div class="service-card">
+                             <i class="fas fa-database"></i>
+                              <h3>Database Development</h3>
+                              <div class="learn-more-btn">Learn More <i class="fa fa-arrow-right"></i></div>
+                          </div>
+                          <div class="service-modal flex-center">
+                              <div class="service-modal-body">
+                                  <i class="fas fa-times modal-close-btn"></i>
+                                  <h3>Database Development</h3>
+                                  <h4>What is UX Design</h4>
+                                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id eligendi aperiam
+                                      assumenda. Tenetur nam necessitatibus numquam, distinctio repellendus architecto.
+                                  </p>
+                                  <h4>What I Provide</h4>
+                                  <ul>
+                                      <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet.</li>
+                                      <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet.</li>
+                                      <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet</li>
+                                      <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit.</li>
+                                  </ul>
+                              </div>
+                          </div>
+                      </li>
+
+                       <li class="service-container">
+                           <div class="service-card">
+                              <i class="fas fa-taxi"></i>
+                               <h3>Travel & Tourism</h3>
+                               <div class="learn-more-btn">Learn More <i class="fa fa-arrow-right"></i></div>
+                           </div>
+                           <div class="service-modal flex-center">
+                               <div class="service-modal-body">
+                                   <i class="fas fa-times modal-close-btn"></i>
+                                   <h3>Uber / eHailing</h3>
+                                   <h4>What is UX Design</h4>
+                                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id eligendi aperiam
+                                       assumenda. Tenetur nam necessitatibus numquam, distinctio repellendus architecto.
+                                   </p>
+                                   <h4>What I Provide</h4>
+                                   <ul>
+                                       <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet.</li>
+                                       <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet.</li>
+                                       <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit amet</li>
+                                       <li><i class="fa fa-check-circle"></i>Lorem ipsum dolor sit.</li>
+                                   </ul>
+                               </div>
+                           </div>
+                       </li>
+                </ul>
+             </div>
+        </div>
+     </section>
+      <!-- ====== SERVICES SECTION END HERE==== -->
 
 
     <script src="/script.js"></script>
