done contact & footer sections

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#about">About</a>
                     <a href="#skills">Skills</a>
                     <a href="#services">Services</a>
-                    <a href="#portifolio">Portfolio</a>
+                    <a href="#portfolio">Portfolio</a>
                     <a href="#contact">Let's Talk</a>
                 </div>
             </div>
@@ -655,6 +655,84 @@
         </div>
     </section>
     <!-- ====== PORTFOLIO SECTION END HERE==== -->
+
+     <!-- ====== CONTACT SECTION START HERE==== -->
+     <section class="contact section" id="contact">
+        <div class="container flex-center">
+            <h1 class="section-title-01">Contact Me</h1>
+            <h2 class="section-title-02">Contact Me</h2>
+            <div class="content">
+                <div class="content-left">
+                    <h2>Let's discuss your project</h2>
+                    <ul class="contact-list">
+                        <li>
+                            <h3 class="item-title"> <i class="fa fa-phone"></i> Phone</h3>
+                            <span>+27 82 666 1222</span>
+                        </li>
+                        <li class="contact-list">
+                            <h3 class="item-title"> <i class="fa fa-envelope"></i> Email Addresss</h3>
+                            <span><a href="mailto:msumba83@gmail.com"></a>msumba83&gmail.com</span>
+                        </li>
+                        <li class="contact-list">
+                            <h3 class="item-title"> <i class="fas class=fas fa-map-marker-alt"></i> Address</h3>
+                            <span>Retreat, Cape Town, South Africa</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="contact-right">
+                    <p>I' m always open to discuss projects <br><span>employment or mentorship</span></p>
+                    <form action="" class="contact-form">
+                        <div class="first-row">
+                            <input type="text" placeholder="Name">
+                        </div>
+                        <div class="second-row">
+                            <input type="email" placeholder="Email">
+                            <input type="text" placeholder="Subject">
+                        </div>
+                        <div class="third-row">
+                            <textarea name="message" id="" rows="7" placeholder="massage"></textarea>
+                        </div>
+                        <button class="btn" type="submit">Send Message <i class="fas fa-paper-plane" aria-hidden="true"></i></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+     <!-- ====== CONTACT SECTION END HERE==== -->
+
+     <!-- ====== FOOTER SECTION START HERE==== -->
+     <footer>
+     <div class="footer-container">
+        <div class="about group">
+            <h2>Alexander</h2>
+            <p>Fullstack Developer</p>
+            <a href="#about">About Me</a>
+        </div>
+        <div class="hr"></div>
+        <div class="info group">
+            <h3>More</h3>
+            <ul>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+        <div class="hr"></div>
+        <div class="follow group">
+        <h3>Follow</h3>
+        <ul>
+            <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href=""><i class="fab fa-github-square"></i></a></li>
+            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+        </ul>
+        </div>
+     </div>
+     <div class="footer-copyright group">
+        <p><i class="fa fa-copyright"></i> 2022 by Alexander Msumba. All right reserved</p>
+     </div>
+     </footer>
+     <!-- ====== FOOTER SECTION END HERE==== -->
 
     <!-- external scripts  -->
     <script src="/swiper-bundle.js"></script>
