--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- <script src="https://kit.fontawesome.com/b9d1a2a2ce.js" crossorigin="anonymous"></script> -->
 
-
+<script src="https://unpkg.com/scrollreveal"></script>
     <!-- ==== w3school font awesome kit ===  -->
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
 
@@ -68,10 +68,10 @@
                 <a href=""><i class="fa fa-globe"></i></a>
             </div>
             <div class="info">
-                <h2>Hi, I' m Alexander Msumba, Jr</h2>
+                <h2>Hi, I' m Alexander Msumba</h2>
                 <h3>Fullstack Software Developer</h3>
                 <p>A Full Stack Web Developer adept in most stages of advanced web development</p>
-                <a href="#contact" class="btn">Let's Talk <i class="fas fa-phone-volume    "></i></a>
+                <a href="#contact" class="btn">Let's Talk <i class="fas fa-handshake"></i></a>
             </div>
             <div class="home-img">
                 <img src="/images/aj-2.jpg" class="profile" alt="">
@@ -95,7 +95,7 @@
                 <div class="about-info">
                     <div class="description">
                         <h3>I'm Alexander</h3>
-                        <h4>An enthusiastic <span>Software Developer</span> based in <span>Cape Town</pan>
+                        <h4>An enthusiastic <span>Fullstack Web Developer</span> based in <span>Cape Town</pan>
                         </h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perferendis deserunt
                             nesciunt ipsa eos praesentium quia blanditiis esse in! Facilis necessitatibus quis, et quo
@@ -574,7 +574,7 @@
                             <h2>Next Project</h2>
                         </div>
                         <div class="contact-btn">
-                            <a href="" class="btn">Get In Touch <i class="fas fa-paper-plane"></i></a>
+                            <a href="#contact" class="btn">Get In Touch <i class="fas fa-paper-plane"></i></a>
                         </div>
                     </div>
                 </div>
