--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
                             <div class="portfolio-modal-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Love Your City</h3>
-                                <img src="/images/aj-10.jpg" alt="">
-                                <p>This is our final project at CodeYourFuture (CYF) boot-camp. A group of four students
+                                <!-- <img src="/images/aj-10.jpg" alt=""> -->
+                                <p>This is our final project at CodeYourFuture. A group of four students
                                     created this. It is aimed at
                                     creating and coordinating charitable campaigns.</p>
                                     <button class="btn"><a href="https://github.com/MSUMBA-art/love-your-city-client" target="_blank">Github</a></button>
@@ -559,7 +559,7 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Hotel Booking</h3>
+                                <h3>TinDog</h3>
                                 <span>Learn More</span>
                             </div>
                             <img src="/images/aj-10.jpg" alt="">
@@ -567,14 +567,13 @@
                         <div class="portfolio-modal flex-center">
                             <div class="portfolio-modal-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>Hotel Booking</h3>
+                                <h3>Bootstrap</h3>
                                 <img src="/images/aj-10.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere consequatur doloribus
-                                    odio voluptatem fuga. Perferendis nam illo repudiandae aut rem placeat quisquam
-                                    dicta quidem?</p>
-                                    <button class="btn"><a href="https://github.com/MSUMBA-art/love-your-city-client"
+                                <p>The idea for this site was to learn using bootstrap. Tech used: HTML, CSS AND BOOTSTRAP</p>
+                                    <button class="btn"><a href="https://github.com/MSUMBA-art/TinDog-Start"
                                             target="_blank">Github</a></button>
-                                    <button class="btn"><a href="" target="_blank">Live Demo</a></button>
+                                    <button class="btn"><a href="https://alex-bootstrap-css.netlify.app/"
+                                            target="_blank">Live Demo</a></button>
                             </div>
                         </div>
                     </div>
