--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                             <div class="portfolio-modal-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Love Your City</h3>
-                                <!-- <img src="/images/aj-10.jpg" alt=""> -->
+                                <img src="/images/aj-10.jpg" alt="">
                                 <p>This is our final project at CodeYourFuture. A group of four students
                                     created this. It is aimed at
                                     creating and coordinating charitable campaigns.</p>
@@ -582,7 +582,7 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Hotel Booking App</h3>
+                                <h3>TO-DO LIST</h3>
                                 <span>Learn More</span>
                             </div>
                             <img src="/images/aj-6.jpg" alt="">
@@ -590,14 +590,14 @@
                         <div class="portfolio-modal flex-center">
                             <div class="portfolio-modal-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>Web Development</h3>
+                                <h3>TO-DO LIST</h3>
                                 <img src="/images/aj-8.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere consequatur doloribus
-                                    odio voluptatem fuga. Perferendis nam illo repudiandae aut rem placeat quisquam
+                                <p>TO-DO List is an app where you can add or delete items to the list. Tech used <em>HTML, CSS, EJS and JavaScript. It is hosted on Heroku</em>
                                     </p>
-                                    <button class="btn"><a href="https://github.com/MSUMBA-art/love-your-city-client"
+                                    <button class="btn"><a href="https://github.com/MSUMBA-art/to-do-list-2"
                                             target="_blank">Github</a></button>
-                                    <button class="btn"><a href="" target="_blank">Live Demo</a></button>
+                                    <button class="btn"><a href="https://salty-retreat-83572.herokuapp.com/"
+                                            target="_blank">Live Demo</a></button>
                             </div>
                         </div>
                     </div>
@@ -606,7 +606,7 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>CRUD APP</h3>
+                                <h3>Mongo Database</h3>
                                 <span>Learn More</span>
                             </div>
                             <img src="/images/aj-8.jpg" alt="">
@@ -614,12 +614,12 @@
                         <div class="portfolio-modal flex-center">
                             <div class="portfolio-modal-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>Web Development</h3>
+                                <h3>MongoDB</h3>
                                 <img src="/images/aj-8.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere consequatur doloribus
-                                    odio voluptatem fuga. Perferendis nam illo repudiandae aut rem placeat quisquam
+                                <p>
+                                    Mongo Database practice using Mongoose.
                                     </p>
-                                    <button class="btn"><a href="https://github.com/MSUMBA-art/love-your-city-client"
+                                    <button class="btn"><a href="https://github.com/MSUMBA-art/MONGODB-FruitDB"
                                             target="_blank">Github</a></button>
                                     <button class="btn"><a href="" target="_blank">Live Demo</a></button>
                             </div>
