--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="https://www.linkedin.com/in/alexander-msumba-jr-520056a4/" target="_blank"><i
                         class="fab fa-linkedin-in    "></i></a>
                 <a href="https://www.facebook.com/alexander.msumbah" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://aj-msumba-portfolio.netlify.app/" target="_blank"><i class="fa fa-globe"></i></a>
+                <!-- <a href="https://aj-msumba-portfolio.netlify.app/" target="_blank"><i class="fa fa-globe"></i></a> -->
             </div>
             <div class="info">
                 <h2>Hi, I' m Alexander Msumba</h2>
@@ -639,9 +639,8 @@
                             <div class="portfolio-modal-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Web Development</h3>
-                                <img src="/images/aj-14.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere consequatur doloribus
-                                    odio voluptatem fuga. Perferendis nam illo repudiandae aut rem placeat quisquam
+                                <!-- <img src="/images/aj-14.jpg" alt=""> -->
+                                <p>Project coming soon... <i class="fa fa-eye" aria-hidden="true"></i>
                                    </p>
                                    <button class="btn"><a href="https://github.com/MSUMBA-art/love-your-city-client"
                                            target="_blank">Github</a></button>
@@ -663,9 +662,8 @@
                             <div class="portfolio-modal-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
                                 <h3>Web Development</h3>
-                                <img src="/images/aj-7.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere consequatur doloribus
-                                    odio voluptatem fuga. Perferendis nam illo repudiandae aut rem placeat quisquam
+                                <!-- <img src="/images/aj-7.jpg" alt=""> -->
+                                <p>Project coming soon  ....  <i class="fa fa-eye" aria-hidden="true"></i>
                                     </p>
                                     <button class="btn"><a href="https://github.com/MSUMBA-art/love-your-city-client"
                                             target="_blank">Github</a></button>
@@ -705,13 +703,13 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide flex-center">
                                 <div class="client-img">
-                                    <img src="/images/suit.jpg" alt="">
+                        
+                                    <img src="/images/aj-11.jpg" alt="">
                                 </div>
                                 <div class="client-details">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veritatis eligendi
-                                        aliquam, aperiam quas voluptas.</p>
-                                    <h3>Alex Ander</h3>
-                                    <span>Software Developer</span>
+                                    <p>The driving was amazing- conversation was superb. Best uber driver I've driven with in a while. I would actually rate this driver 11/5 stars.</p>
+                                    <h3>Anonymous</h3>
+                                    <span>Happy Uber Client</span>
                                 </div>
                             </div>
 
@@ -720,10 +718,9 @@
                                     <img src="/images/aj-12.jpg" alt="">
                                 </div>
                                 <div class="client-details">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veritatis eligendi
-                                        aliquam, aperiam quas voluptas.</p>
-                                    <h3>Alex Ander</h3>
-                                    <span>Software Developer</span>
+                                    <p>Very nice guy, critical thinker, observe to details, fast yet safe. Alex is a time saver.</p>
+                                    <h3>Anonymous</h3>
+                                    <span>Happy Uber Client</span>
                                 </div>
                             </div>
 
@@ -805,16 +802,17 @@
                 </div>
                 <div class="contact-right">
                     <p>I' m always open to discuss projects <br><span>employment or mentorship</span></p>
-                    <form action="" class="contact-form">
+                     <form class="contact-form" action="https://formspree.io/f/xknegbnq" method="POST">
+                    <!-- <form action="" class="contact-form"> -->
                         <div class="first-row">
-                            <input type="text" placeholder="Name">
+                            <input type="text" placeholder="Name" required />
                         </div>
                         <div class="second-row">
-                            <input type="email" placeholder="Email">
-                            <input type="text" placeholder="Subject">
+                            <input type="email" placeholder="Email I" required />
+                            <input type="text" placeholder="Subject" required />
                         </div>
                         <div class="third-row">
-                            <textarea name="message" id="" rows="7" placeholder="massage"></textarea>
+                            <textarea name="message" id="" rows="7" placeholder="massage" required ></textarea>
                         </div>
                         <button class="btn" type="submit">Send Message <i class="fas fa-paper-plane"></i></button>
                     </form>
@@ -822,6 +820,22 @@
             </div>
         </div>
     </section>
+
+    <!-- <section class="contact" id="contact">
+        <div class="overlay">
+            <div class="container">
+                <h1>Let's Talk</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam harum dolorem natus!</p>
+                <form action="https://formspree.io/f/xknegbnq" method="POST">
+                    <input type="text" name="name" placeholder="Name" required>
+                    <input type="email" name="Email" placeholder="Email" required>
+                    <input type="text" name="Subject" placeholder="Subject" required>
+                    <textarea name="Massage" placeholder="Message" required></textarea>
+                    <input type="submit" value="Submit" class="btn btn-primary">
+                </form>
+            </div>
+        </div>
+    </section> -->
     <!-- ====== CONTACT SECTION END HERE==== -->
 
     <!-- ====== FOOTER SECTION START HERE==== -->
