done some mvp work

--- a/index.html
+++ b/index.html
@@ -791,9 +791,14 @@
                             <span>+27 82 666 1222</span>
                         </li>
                         <li class="contact-list">
-                            <h3 class="item-title"> <i class="fa fa-envelope"></i> Email Addresss</h3>
-                            <span><a href="mailto:msumba83@gmail.com"></a>msumba83&gmail.com</span>
+                            <h3 class="item-title"> <i class="fab fa-whatsapp"></i></i> WhatsApp</h3>
+                            <span><a href="https://wa.me/27826661222>" target="_blank">Whatsapp me</a></span>
                         </li>
+                        <li class="contact-list">
+                            <h3 class="item-title"> <i class="fa fa-envelope"></i> Email Address</h3>
+                            <span><a href="mailto:msumba83@gmail.com">msumba83&gmail.com</a></span>
+                        </li>
+
                         <li class="contact-list">
                             <h3 class="item-title"> <i class="fas class=fas fa-map-marker-alt"></i> Address</h3>
                             <span>Retreat, Cape Town, South Africa</span>
@@ -808,11 +813,11 @@
                             <input type="text" placeholder="Name" required />
                         </div>
                         <div class="second-row">
-                            <input type="email" placeholder="Email I" required />
+                            <input type="email" placeholder="Email" required />
                             <input type="text" placeholder="Subject" required />
                         </div>
                         <div class="third-row">
-                            <textarea name="message" id="" rows="7" placeholder="massage" required ></textarea>
+                            <textarea name="message" id="" rows="7" placeholder="Message" required ></textarea>
                         </div>
                         <button class="btn" type="submit">Send Message <i class="fas fa-paper-plane"></i></button>
                     </form>
@@ -860,9 +865,17 @@
             <div class="follow group">
                 <h3>Follow</h3>
                 <ul>
-                    <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                    <!-- <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                     <li><a href=""><i class="fab fa-github-square"></i></a></li>
-                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li> -->
+
+                    <li> <a href="https://github.com/MSUMBA-art" target="_blank"><i class="fab fa-github-square"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/alexander-msumba-jr-520056a4/" target="_blank"><i
+                              class="fab fa-linkedin-in"></i></a></li>
+                              <li><a href="https://www.facebook.com/alexander.msumbah" target="_blank"><i
+                                       class="fab fa-facebook"></i></a></li>
+                               <li><a href="https://aj-msumba-portfolio.netlify.app/" target="_blank"><i
+                                       class="fa fa-globe"></i></a></li>
                 </ul>
             </div>
         </div>
