done for now as an MVP portfolio, more work will be done

--- a/index.html
+++ b/index.html
@@ -630,21 +630,22 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Web Development</h3>
-                                <span>YouTube</span>
+                                <h3>React.js Portfolio</h3>
+                                <span>Learn More..</span>
                             </div>
                             <img src="/images/aj-14.jpg" alt="">
                         </div>
                         <div class="portfolio-modal flex-center">
                             <div class="portfolio-modal-body">
                                 <i class="fas fa-times portfolio-close-btn"></i>
-                                <h3>Web Development</h3>
-                                <!-- <img src="/images/aj-14.jpg" alt=""> -->
-                                <p>Project coming soon... <i class="fa fa-eye" aria-hidden="true"></i>
+                                <h3>React.js Web Page</h3>
+                                <img src="/images/aj-14.jpg" alt="">
+                                <p>This is my old portfolio and was build using react.js   <i class="fa fa-eye" aria-hidden="true"></i>
                                    </p>
-                                   <button class="btn"><a href="https://github.com/MSUMBA-art/love-your-city-client"
+                                   <button class="btn"><a href="https://github.com/MSUMBA-art/my-website"
                                            target="_blank">Github</a></button>
-                                   <button class="btn"><a href="" target="_blank">Live Demo</a></button>
+                                   <button class="btn"><a href="https://aj-msumba-portfolio-1.netlify.app/"
+                                           target="_blank">Live Demo</a></button>
                             </div>
                         </div>
                     </div>
@@ -825,22 +826,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <section class="contact" id="contact">
-        <div class="overlay">
-            <div class="container">
-                <h1>Let's Talk</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam harum dolorem natus!</p>
-                <form action="https://formspree.io/f/xknegbnq" method="POST">
-                    <input type="text" name="name" placeholder="Name" required>
-                    <input type="email" name="Email" placeholder="Email" required>
-                    <input type="text" name="Subject" placeholder="Subject" required>
-                    <textarea name="Massage" placeholder="Message" required></textarea>
-                    <input type="submit" value="Submit" class="btn btn-primary">
-                </form>
-            </div>
-        </div>
-    </section> -->
     <!-- ====== CONTACT SECTION END HERE==== -->
 
     <!-- ====== FOOTER SECTION START HERE==== -->
