done for now as an MVP portfolio, more work will be done

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 12 (matric)
                                 in 2002, I did not go to university or any collage because of financial situation of
                                 the time,
-                                however, that did not remove my passion for technology. Fast forward, in 2019 I was
+                                however, that did not stop my passion for technology. Fast forward, in 2019 I was
                                 accepted for
                                 a boot-camp course with <a href="https://codeyourfuture.io/cape-town/"
                                     target="_blank"><b><em>CodeYourFuture</em></b></a>
@@ -154,8 +154,8 @@
                 <div class="skills-description">
                     <h3>Education & Skills</h3>
                     <p>After finishing my secondary school level which is equivalent to South Africa's grade 12 (matric)
-                        in 2002, I did not go to university or any collage because of financial stuations of the time,
-                        however, that did not remove my passion for technology. Fast forward, in 2019 I was accepted for
+                        in 2002, I did not go to university or any collage because of financial situations of the time,
+                        however, that did not stop my passion for technology. Fast forward, in 2019 I was accepted for
                         a boot-camp course with <a href="https://codeyourfuture.io/cape-town/"
                             target="_blank"><b><em>CodeYourFuture</em></b></a> and graduated
                         in 2021 with a certificate of completion in fullstack web development
