--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a href="#contact" class="btn">Let's Talk <i class="fas fa-handshake"></i></a>
             </div>
             <div class="home-img">
-                <img src="/images/suit.jpg" class="profile" alt="">
+                <img src="/images/golf-shirt.jpg" class="profile" alt="">
             </div>
         </div>
         <!-- <a href="#about" class="scroll-down">Scroll<i class="fas fa-arrow-down"></i>Down</a> -->
@@ -91,7 +91,7 @@
             <h2 class="section-title-02">About Me</h2>
             <div class="content flex-center">
                 <div class="about-img">
-                    <img src="/images/suit.jpg" alt="">
+                    <img src="/images/brand.jpg" alt="">
                 </div>
                 <div class="about-info">
                     <div class="description">
@@ -133,7 +133,6 @@
                                 developed a lot of soft skills. I am available for Full time, Internship, mentorship or
                                 any position and guidance that will land me in tech industry
                             </p>
-
                         </div>
                         <a class="read-more">Read more...</a>
                     </div>
