--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h2 class="section-title-02">About Me</h2>
             <div class="content flex-center">
                 <div class="about-img">
-                    <img src="/images/brand.jpg" alt="">
+                    <img src="/images/udemy-web-img.jpg" alt="">
                 </div>
                 <div class="about-info">
                     <div class="description">
@@ -167,12 +167,14 @@
                             <li class="item">
                                 <span class="year">2020-2021</span>
                                 <p><span>Certificate, Software Development</span> CodeYourFuture, RSA</p>
-                                <!-- <a href="/images/mycv.pdf" target="_blank" class="btn">VIEW CERTIFICATE</a> -->
+                                
+                                <a href="/images/udemy-web-img.jpg" target="_blank"><i class="fa fa-eye"></i> VIEW CERTIFICATE</a>
                             </li>
                             <li class="item">
                                 <span class="year">2021-2022</span>
                                 <p><span>Certificate, Web Development</span> Udemy, Online</p>
-                                <!-- <a href="/images/mycv.pdf" target="_blank" class="btn">VIEW CERTIFICATE</a> -->
+                                
+                                <a href="/images/udemy-web-img.jpg" target="_blank"><i class="fa fa-eye"></i> VIEW CERTIFICATE</a>
                             </li>
                             <li class="item">
                                 <span class="year">2021-2022</span>
