updated CV document

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <a class="read-more">Read more...</a>
                     </div>
 
-                    <a href="/images/mycv.pdf" download class="btn"> Download CV <i class="fa fa-file-download"></i></a>
+                    <a href="/images/alex-eco.pdf" download class="btn"> Download CV <i class="fa fa-file-download"></i></a>
                 </div>
             </div>
         </div>
@@ -188,7 +188,7 @@
 
                             <li class="item">
                                 <span class="year">2002</span>
-                                <p><span>Matric Certificate,</span> Thunga Seconary School, Malawi</p>
+                                <p><span>Matric Certificate,</span> Thunga Secondary School, Malawi</p>
                             </li>
                         </ul>
                     </div>
@@ -225,7 +225,7 @@
                             </li>
                             <li class="bar">
                                 <div class="info">
-                                    <span>Reactjs</span>
+                                    <span>React.js</span>
                                     <span>80%</span>
                                 </div>
                                 <div class="line react"></div>
@@ -726,7 +726,7 @@
                                 </div>
                             </div>
 
-                            <div class="swiper-slide flex-center">
+                            <!-- <div class="swiper-slide flex-center">
                                 <div class="client-img">
                                     <img src="/images/aj-2.jpg" alt="">
                                 </div>
@@ -736,7 +736,7 @@
                                     <h3>Alex Ander</h3>
                                     <span>Software Developer</span>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="swiper-slide flex-center">
                                 <div class="client-img">
