--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             </div>
             <div class="info">
                 <h2>Hi, I' m Alexander Msumba</h2>
-                <h3>Junior Software Developer</h3>
-                <p>A Junior Fullstack Web Developer adept in most stages of advanced web development</p>
+                <h3>Fullstack Software Developer</h3>
+                <p>A Junior Web Developer adept in most stages of advanced web development</p>
                 <a href="#contact" class="btn">Let's Talk <i class="fas fa-handshake"></i></a>
             </div>
             <div class="home-img">
@@ -96,14 +96,17 @@
                 <div class="about-info">
                     <div class="description">
                         <h3>I'm Alexander</h3>
-                        <h4>Uber Driver cum <span>Fullstack Web Developer</span> based in <span>Cape Town</pan>
+                        <h4>An Uber Driver cum <span>Fullstack Web Developer</span> based in <span>Cape Town</pan>
                         </h4>
 
                         <p>An enthusiastic Fullstack Web Developer, adept in most stages of advanced web development.
                             Basic knowledge in User Interface development, Backend, Database, testing, and debugging
                             processes. <br> A Malawian by nationality, legally residing in the southern suburbs of Cape
                             Town.
-                        </p>
+                            <br><br>
+                    I seek challenging opportunities where I can fully use my skills for the success of the organization</p>
+
+                        
                         <div class="read-more-content">
                             <p>Adaptable and willing to learn new concepts. Equipped with a diverse and promising soft
                                 and
@@ -113,11 +116,7 @@
                                 effectively self-manage
                                 during independent projects, as well as collaborate in a team setting.
                             </p>
-                            <p>After finishing my secondary school level which is equivalent to South Africa's grade
-                                12 (matric)
-                                in 2002, I did not go to university or any collage because of financial situation of
-                                the time,
-                                however, that did not stop my passion for technology. Fast forward, in 2019 I was
+                            <p>I like Continuous learning that  in 2019 I was
                                 accepted for
                                 a boot-camp course with <a href="https://codeyourfuture.io/cape-town/"
                                     target="_blank"><b><em>CodeYourFuture</em></b></a>
@@ -153,11 +152,10 @@
                 <div class="skills-description">
                     <h3>Education & Skills</h3>
                     <p>After finishing my secondary school level which is equivalent to South Africa's grade 12 (matric)
-                        in 2002, I did not go to university or any collage because of financial situations of the time,
-                        however, that did not stop my passion for technology. Fast forward, in 2019 I was accepted for
+                        in 2002, had a desire for Information Technology. Fast forward, in 2019 I was accepted for
                         a boot-camp course with <a href="https://codeyourfuture.io/cape-town/"
                             target="_blank"><b><em>CodeYourFuture</em></b></a> and graduated
-                        in 2021 with a certificate of completion in fullstack web development
+                        in 2021 with a certificate of completion in fullstack web development.
                     </p>
                 </div>
                 <div class="skills-info education-all">
@@ -183,7 +181,7 @@
                             </li>
                             <li class="item">
                                 <span class="year">2018-2019</span>
-                                <p><span>Certificate, Theological Studies</span> MAGIT, Malawi</p>
+                                <p><span>Diploma, Theological Studies</span> MAGIT, Malawi</p>
                             </li>
 
                             <li class="item">
