--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                                 My Tech stack is MERN with a keen interest in frontend technologies. However, I am also
                                 good
                                 in backend <em>(Nodejs)</em> and databases <em>(MySQL, PostgreSQL & MongoDB).</em>
-                                <br>
+                                <br> <br>
                                 Currently my daily job is I work as an Uber Driver for the past 6 years with almost 30
                                 thousand trips where I
-                                developed a lot of soft skills. I am available for Full time, Internship, mentorship or
+                                developed a lot of soft skills. <br> <br> I am available for Full time, Internship, mentorship or
                                 any position and guidance that will land me in tech industry
                             </p>
                         </div>
