--- a/index.html
+++ b/index.html
@@ -152,10 +152,11 @@
                 <div class="skills-description">
                     <h3>Education & Skills</h3>
                     <p>After finishing my secondary school level which is equivalent to South Africa's grade 12 (matric)
-                        in 2002, had a desire for Information Technology. Fast forward, in 2019 I was accepted for
-                        a boot-camp course with <a href="https://codeyourfuture.io/cape-town/"
-                            target="_blank"><b><em>CodeYourFuture</em></b></a> and graduated
-                        in 2021 with a certificate of completion in fullstack web development.
+                        in 2002, had a desire for Information Technology. Fast forward, in 2019 I was accepted for a diploma and 
+                        a boot-camp course with <a href="https://abma.uk.com/" target="_blank">ABMA</a> and <a
+                            href="https://codeyourfuture.io/cape-town/"
+                            target="_blank"><b><em>CodeYourFuture</em></b></a> respectively, graduated
+                         with level 5 diploma in <em>Profession Computing and Information System</em> and a  certificate of completion in fullstack web development.
                     </p>
                 </div>
                 <div class="skills-info education-all">
@@ -168,6 +169,12 @@
                                 
                                 <a href="/images/cyf2021-certificate.pdf" target="_blank"><i class="fa fa-eye"></i> VIEW CERTIFICATE</a>
                             </li>
+
+                             <li class="item">
+                                 <span class="year">2019 - 0n going</span>
+                                 <p><span>Diploma Level 5, Profession Computing and Information System </span> ABMA, UK</p>
+                             </li>
+
                             <li class="item">
                                 <span class="year">2021-2022</span>
                                 <p><span>Certificate, Web Development</span> Udemy, Online</p>
@@ -178,10 +185,6 @@
                                 <span class="year">2021-2022</span>
                                 <p><span>Certificate, JavaScript Course</span> Udemy, Online</p>
                         
-                            </li>
-                            <li class="item">
-                                <span class="year">2018-2019</span>
-                                <p><span>Diploma, Theological Studies</span> MAGIT, Malawi</p>
                             </li>
 
                             <li class="item">
