--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             </li>
 
                              <li class="item">
-                                 <span class="year">2019 - 0n going</span>
+                                 <span class="year">2019 - 2021</span>
                                  <p><span>Diploma Level 5, Profession Computing and Information System </span> ABMA, UK</p>
                              </li>
 
