--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div class="home-container">
             <div class="media-icons">
                 <a href="https://github.com/MSUMBA-art" target="_blank"><i class="fab fa-github-square"></i></a>
-                <a href="https://www.linkedin.com/in/alexander-msumba-jr-520056a4/" target="_blank"><i
-                        class="fab fa-linkedin-in    "></i></a>
+                <a href="https://www.linkedin.com/in/aj83/" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.facebook.com/alexander.msumbah" target="_blank"><i class="fab fa-facebook"></i></a>
                 <!-- <a href="https://aj-msumba-portfolio.netlify.app/" target="_blank"><i class="fa fa-globe"></i></a> -->
             </div>
@@ -733,7 +733,7 @@
                                 </div>
                             </div>
 
-                            <!-- <div class="swiper-slide flex-center">
+                            
                                 <div class="client-img">
                                     <img src="/images/aj-2.jpg" alt="">
                                 </div>
@@ -863,7 +863,7 @@
                     <li><a href=""><i class="fab fa-instagram"></i></a></li> -->
 
                     <li> <a href="https://github.com/MSUMBA-art" target="_blank"><i class="fab fa-github-square"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/alexander-msumba-jr-520056a4/" target="_blank"><i
+                      <li><a href="https://www.linkedin.com/in/aj83/" target="_blank"><i
                               class="fab fa-linkedin-in"></i></a></li>
                               <li><a href="https://www.facebook.com/alexander.msumbah" target="_blank"><i
                                        class="fab fa-facebook"></i></a></li>
